able to push to database

--- a/index.html
+++ b/index.html
@@ -3,13 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Champions</title>
 </head>
 <body>
     <div class="container">
+        <img src="freddie.png" alt="">
+        <h1 class="heading-color">We are the Champions</h1>
+        <input type="text" name="" id="input-field" placeholder="Write your endorsement here">
+        <div class="from-to">
+            <input type="text" name="" id="from-input" placeholder="from">
+            <input type="text" id="to-input" placeholder="to">
+        </div>
+        <button id="publish-btn">Publish</button>
+        <h3 class="heading-color">- Endorsements -</h3>
+        <div class="paragraphs" id="posts-container">
+            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum 
+                quaerat quidem ipsum 
+                beatae atque porro sint voluptatem quo neque delectus molestias 
+                eaque optio dignissimos veritatis itaque aliquid temporibus, a nisi.
+            </p>
+            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum 
+                quaerat quidem ipsum.
+            </p>
+        </div>
 
     </div>
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 </html>
