now able to add likes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Champions</title>
 </head>
@@ -21,14 +25,7 @@
         <button id="publish-btn">Publish</button>
         <h3 class="heading-color">- Endorsements -</h3>
         <div class="paragraphs" id="posts-container">
-            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum 
-                quaerat quidem ipsum 
-                beatae atque porro sint voluptatem quo neque delectus molestias 
-                eaque optio dignissimos veritatis itaque aliquid temporibus, a nisi.
-            </p>
-            <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum 
-                quaerat quidem ipsum.
-            </p>
+            
         </div>
 
     </div>
